--- a/client/index.html
+++ b/client/index.html
@@ -71,6 +71,8 @@
         <!-- build:js({.tmp,client}) app/app.js -->
         <script src="app/app.js"></script>
           <!-- injector:js -->
+          <script src="app/disease/bullet.js"></script>
+          <script src="app/disease/disease.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
           <script src="app/rotation/directive.modalityGoal.js"></script>
