--- a/client/app/rotation/rotation.html
+++ b/client/app/rotation/rotation.html
@@ -35,7 +35,7 @@
         <div id="studiesListItems">
             <div ng-repeat="study in studiesList" class="studiesListItem">
                 <div class="examDesc">[ {{study.modality}} ] {{study.exam_name}}</div>
-                <div class="examTime">Transcribed Time: {{study.transcribed_time*1000 | date: 'short'}}</div>
+                <div class="examTime">Transcribed Time: {{study.transcribed_time | date: 'short'}}</div>
             </div>
         </div>
     </div>
