--- a/client/index.html
+++ b/client/index.html
@@ -65,6 +65,8 @@
       <script src="bower_components/angular-slick-carousel/dist/slick.js"></script>
       <script src="bower_components/angular-touch/angular-touch.js"></script>
       <script src="bower_components/ng-table/ng-table.js"></script>
+      <script src="bower_components/angular-mocks/angular-mocks.js"></script>
+      <script src="bower_components/angular-diff/angular-diff.js"></script>
       <!-- endbower -->
     <!-- endbuild -->
 
