added timeout feature for PHI

--- a/client/index.html
+++ b/client/index.html
@@ -67,6 +67,7 @@
       <script src="bower_components/ng-table/ng-table.js"></script>
       <script src="bower_components/angular-mocks/angular-mocks.js"></script>
       <script src="bower_components/angular-diff/angular-diff.js"></script>
+      <script src="bower_components/ng-idle/angular-idle.js"></script>
       <!-- endbower -->
     <!-- endbuild -->
 
