--- a/client/app/rotation/rotation.html
+++ b/client/app/rotation/rotation.html
@@ -3,7 +3,7 @@
         <div id="logo"><i class="fa fa-cubes"></i> TROVE</div>
         <div class="toplink" id="badges" ng-click="badgesListShow()"><i class="fa fa-trophy"></i> Badges</div>
         <div class="toplink" id="minnies" ng-model="minnies">{{minnies | number}} minnies</div>
-        <div class="toplink" id="diseaseview"><i class="fa fa-th"></i> Disease View</div>
+        <div class="toplink" id="diseaseview" ng-click="diseaseView()"><i class="fa fa-th"></i> Disease View</div>
         <div class="toplink" id="feedback" ng-click="feedbackBoxShow = true"><i class="fa fa-comment-o"></i> Feedback</div>
         <div id="user">
             Welcome, <span id="name">{{ data.name }}</span> | <span id="logout">logout</span>
@@ -67,7 +67,7 @@
         <div class="md-content-item">
             Name (optional):<br><input class="inputfield" type="text" name="fname" ng-model="fname" /><br><br>
             Message:<br><textarea class="inputfield" type="textarea" name="fmsg" ng-model="fmsg"></textarea></div>
-        <div class="text-center"><span class="button" ng-click="feedbackBoxShow = false; sendFeedback();">Send</span></div> 
+        <div class="text-center"><span class="button" ng-click="feedbackBoxShow = false; sendFeedback();">Send</span> <span class="button" ng-click="feedbackBoxShow = false">Close</span></div> 
     </div>
 </div>
 
