--- a/client/app/disease/disease.html
+++ b/client/app/disease/disease.html
@@ -1,19 +1,10 @@
-<div>
-	<style>
-		.bullet { font: 10px sans-serif; }
-		.bullet .marker { stroke: #000; stroke-width: 2px; }
-		.bullet .tick line { stroke: #666; stroke-width: .5px; }
-		.bullet .range.s0 { fill: #eee; }
-		.bullet .range.s1 { fill: #ddd; }
-		.bullet .range.s2 { fill: #ccc; }
-		.bullet .measure.s0 { fill: lightsteelblue; }
-		.bullet .measure.s1 { fill: steelblue; }
-		.bullet .title { font-size: 14px; font-weight: bold; }
-		.bullet .subtitle { fill: #999; }
-		.selectedRotation {background: #81CFE0}
-	</style>
-	<div id="dashboard-header" class="row">
-        <div id="logo" class="animated fadeInLeft"><i class="fa fa-cubes"></i> TROVE</div>
+<div class="container-fluid">
+    <div id="dashboard-header" class="row">
+        <div id="logo"><i class="fa fa-cubes"></i> TROVE</div>
+        <div class="toplink" id="badges" ng-click="badgesListShow()"><i class="fa fa-trophy"></i> Badges</div>
+        <div class="toplink" id="minnies" ng-model="minnies">{{minnies | number}} minnies</div>
+        <div class="toplink" id="rotationview" ng-click="rotationView()"><i class="fa fa-circle-o"></i> Rotation View</div>
+        <div class="toplink" id="feedback" ng-click="feedbackBoxShow = true"><i class="fa fa-comment-o"></i> Feedback</div>
         <div id="user">
             Welcome, <span id="name">{{ data.name }}</span> | <span id="logout">logout</span>
         </div>
@@ -21,29 +12,53 @@
     <div class="container-fluid">
     	<div class="col-md-3 animated fadeInLeft">
     		<div class="col-md-12 panel" ng-class="getSelected('BODY CT')" ng-click="updateChart('BODY CT')">
-	    		<h1>Body CT</h1>
+	    		Body CT
 	    	</div>
     		<div class="col-md-12 panel" ng-class="getSelected('GI')" ng-click="updateChart('GI')">
-	    		<h1>GI</h1>
+	    		GI
 	    	</div>
     		<div class="col-md-12 panel" ng-class="getSelected('NEURO')" ng-click="updateChart('NEURO')">
-	    		<h1>Neuro</h1>
+	    		Neuro
 	    	</div>
     		<div class="col-md-12 panel" ng-class="getSelected('PEDS')" ng-click="updateChart('PEDS')">
-	    		<h1>Peds</h1>
+	    		Peds
 	    	</div>
     		<div class="col-md-12 panel" ng-class="getSelected('NUCS')" ng-click="updateChart('NUCS')">
-	    		<h1>Nucs</h1>
+	    		Nucs
 	    	</div>
     		<div class="col-md-12 panel" ng-class="getSelected('CHEST INPT')" ng-click="updateChart('CHEST INPT')">
-	    		<h1>Chest</h1>
+	    		Chest
 	    	</div>
     		<div class="col-md-12 panel" ng-class="getSelected('BONE')" ng-click="updateChart('BONE')">
-	    		<h1>Bone</h1>
+	    		Bone
 	    	</div>
     	</div>
     	<div class="col-md-9 well animated fadeInRight">
-			<bullet-Chart directive-data="data"></bullet-Chart>
+			<bullet-Chart directive-data="diseaseData"></bullet-Chart>
 		</div>
 	</div>
+    <div id="badgesList" class="row animated fadeInDown" ng-if="badgesListShowBoolean" ng-class="{'fadeOutUp': badgesListFadeOutBoolean}">
+        <span id="badgesListClose" class="panelCloseButton" ng-click="badgesListClose()"></span>
+        <div id="badgesListItems">        <div id="badgesListHeader">My Badges</div>
+            <div ng-repeat="badge in badges" class="badge">
+                <div class="badgeIcon"><img ng-src="{{badge.iconURL}}" /></div>
+                <div class="badgeDesc">{{badge.desc}}</div>
+                <div class="badgeDate">{{badge.dateAchieved | date: 'medium'}}</div>
+            </div>
+            <div></div>
+        </div>
+    </div>
 </div>
+
+<div class="md-modal md-effect" ng-class="{'md-show': feedbackBoxShow}">
+    <div class="md-content">
+        <h3>Feedback</h3>
+        <div class="md-content-item">
+            Name (optional):<br><input class="inputfield" type="text" name="fname" ng-model="fname" /><br><br>
+            Message:<br><textarea class="inputfield" type="textarea" name="fmsg" ng-model="fmsg"></textarea></div>
+        <div class="text-center"><span class="button" ng-click="feedbackBoxShow = false; sendFeedback();">Send</span> <span class="button" ng-click="feedbackBoxShow = false">Close</span></div> 
+    </div>
+</div>
+
+<div class="md-overlay" ng-click="feedbackBoxShow = false"></div>
+
