--- a/client/index.html
+++ b/client/index.html
@@ -75,7 +75,10 @@
         <script src="app/app.js"></script>
           <!-- injector:js -->
           <script src="app/disease/bullet.js"></script>
+          <script src="app/disease/directive.bulletChart.js"></script>
+          <script src="app/disease/disease.controller.js"></script>
           <script src="app/disease/disease.js"></script>
+          <script src="app/disease/factory.diseaseValues.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
           <script src="app/rotation/directive.modalityGoal.js"></script>
