--- a/client/app/rotation/rotation.html
+++ b/client/app/rotation/rotation.html
@@ -6,7 +6,7 @@
         <div class="toplink" id="diseaseview" ng-click="diseaseView()"><i class="fa fa-th"></i> Disease View</div>
         <div class="toplink" id="feedback" ng-click="feedbackBoxShow = true"><i class="fa fa-comment-o"></i> Feedback</div>
         <div id="user">
-            Welcome, <span id="name">{{ data.name }}</span> | <span id="logout">logout</span>
+            Welcome, <span id="name">{{ data.name }}</span> | <span id="logout" ng-click="logout()">logout</span>
         </div>
     </div>
     <div id="rotation-view" class="dashboard-content-wrapper">
