--- a/client/index.html
+++ b/client/index.html
@@ -48,7 +48,7 @@
     <script src="bower_components/es5-shim/es5-shim.js"></script>
     <script src="bower_components/json3/lib/json3.min.js"></script>
     <![endif]-->
-    <script src="socket.io/socket.io.js"></script>
+    <!--<script src="socket.io/socket.io.js"></script>-->
     <!-- build:js(client) app/vendor.js -->
       <!-- bower:js -->
       <script src="bower_components/jquery/dist/jquery.js"></script>
@@ -74,11 +74,9 @@
         <!-- build:js({.tmp,client}) app/app.js -->
         <script src="app/app.js"></script>
           <!-- injector:js -->
-          <script src="app/disease/bullet.js"></script>
-          <script src="app/disease/directive.bulletChart.js"></script>
           <script src="app/disease/disease.controller.js"></script>
           <script src="app/disease/disease.js"></script>
-          <script src="app/disease/factory.diseaseValues.js"></script>
+          <script src="app/disease/factory.diseaseGoals.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
           <script src="app/rotation/directive.modalityGoal.js"></script>
