--- a/client/app/disease/disease.html
+++ b/client/app/disease/disease.html
@@ -1,9 +1,9 @@
 <div class="container-fluid">
     <div id="dashboard-header" class="row">
         <div id="logo"><i class="fa fa-cubes"></i> TROVE</div>
-        <div class="toplink" id="badges" ng-click="badgesListShow()"><i class="fa fa-trophy"></i> Badges</div>
-        <div class="toplink" id="minnies" ng-model="minnies">{{minnies | number}} minnies</div>
+        <div class="toplink" id="badges" ng-click="badgesListShow()"><i class="fa fa-trophy"></i> Badges ({{minnies | number}} minnies)</div>
         <div class="toplink" id="rotationview" ng-click="rotationView()"><i class="fa fa-circle-o"></i> Rotation View</div>
+        <div class="toplink" id="acgmeview" ng-click="ACGMEView()"><i class="fa fa-graduation-cap"></i> ACGME Goals</div>
         <div class="toplink" id="feedback" ng-click="feedbackBoxShow = true"><i class="fa fa-comment-o"></i> Feedback</div>
         <div id="user">
             Welcome, <span id="name">{{ data.name }}</span> | <span id="logout" ng-click="logout()">logout</span>
@@ -84,16 +84,18 @@
         </div>
 	</div>
 
-    <div id="badgesList" class="row animated fadeInDown" ng-if="badgesListShowBoolean" ng-class="{'fadeOutUp': badgesListFadeOutBoolean}">
-        <span id="badgesListClose" class="panelCloseButton" ng-click="badgesListClose()"></span>
-        <div id="badgesListItems">        <div id="badgesListHeader">My Badges</div>
-            <div ng-repeat="badge in badges" class="badge">
-                <div class="badgeIcon"><img ng-src="{{badge.iconURL}}" /></div>
-                <div class="badgeDesc">{{badge.desc}}</div>
-                <div class="badgeDate">{{badge.dateAchieved | date: 'medium'}}</div>
-            </div>
-            <div></div>
+</div>
+
+
+<div id="badgesList" class="row animated fadeInDown" ng-if="badgesListShowBoolean" ng-class="{'fadeOutUp': badgesListFadeOutBoolean}">
+    <span id="badgesListClose" class="panelCloseButton" ng-click="badgesListClose()"></span>
+    <div id="badgesListItems">        <div id="badgesListHeader">My Badges</div>
+        <div ng-repeat="badge in badges" class="badge">
+            <div class="badgeIcon"><img ng-src="{{badge.iconURL}}" /></div>
+            <div class="badgeDesc">{{badge.desc}}</div>
+            <div class="badgeDate">{{badge.dateAchieved | date: 'medium'}}</div>
         </div>
+        <div></div>
     </div>
 </div>
 
