--- a/client/app/rotation/rotation.html
+++ b/client/app/rotation/rotation.html
@@ -1,10 +1,10 @@
 <div class="container-fluid">
     <div id="dashboard-header" class="row">
         <div id="logo"><i class="fa fa-cubes"></i> TROVE</div>
-        <div class="toplink" id="badges" ng-click="badgesListShow()"><i class="fa fa-trophy"></i> Badges</div>
-        <div class="toplink" id="minnies" ng-model="minnies">{{minnies | number}} minnies</div>
+        <div class="toplink" id="badges" ng-click="badgesListShow()"><i class="fa fa-trophy"></i> Badges ({{minnies | number}} minnies)</div>
         <div class="toplink" id="diseaseview" ng-click="diseaseView()"><i class="fa fa-th"></i> Disease View</div>
-        <div class="toplink" id="feedback" ng-click="feedbackBoxShow = true"><i class="fa fa-comment-o"></i> Feedback</div>
+        <div class="toplink" id="acgmeview" ng-click="ACGMEView()"><i class="fa fa-graduation-cap"></i> ACGME Goals</div>
+        <div class="toplink" id="feedback" ng-click="feedbackBoxShow = true"><i class="fa fa-comment-o"></i> Feedback Goals</div>
         <div id="user">
             Welcome, <span id="name">{{ data.name }}</span> | <span id="logout" ng-click="logout()">logout</span>
         </div>
@@ -50,19 +50,21 @@
             </div>
         </div>
     </div>
-    <div id="badgesList" class="row animated fadeInDown" ng-if="badgesListShowBoolean" ng-class="{'fadeOutUp': badgesListFadeOutBoolean}">
-        <span id="badgesListClose" class="panelCloseButton" ng-click="badgesListClose()"></span>
-        <div id="badgesListItems">        <div id="badgesListHeader">My Badges</div>
-            <div ng-repeat="badge in badges" class="badge">
-                <div class="badgeIcon"><img ng-src="{{badge.iconURL}}" /></div>
-                <div class="badgeDesc">{{badge.desc}}</div>
-                <div class="badgeDate">{{badge.dateAchieved | date: 'medium'}}</div>
-            </div>
-            <div></div>
-        </div>
-    </div>
+
 </div>
 
+<div id="badgesList" class="row animated fadeInDown" ng-if="badgesListShowBoolean" ng-class="{'fadeOutUp': badgesListFadeOutBoolean}">
+    <span id="badgesListClose" class="panelCloseButton" ng-click="badgesListClose()"></span>
+    <div id="badgesListItems">        <div id="badgesListHeader">My Badges</div>
+        <div ng-repeat="badge in badges" class="badge">
+            <div class="badgeIcon"><img ng-src="{{badge.iconURL}}" /></div>
+            <div class="badgeDesc">{{badge.desc}}</div>
+            <div class="badgeDate">{{badge.dateAchieved | date: 'medium'}}</div>
+        </div>
+        <div></div>
+    </div>
+</div>
+    
 <div class="md-modal md-effect" ng-class="{'md-show': feedbackBoxShow}">
     <div class="md-content">
         <h3>Feedback</h3>
