--- a/client/index.html
+++ b/client/index.html
@@ -74,6 +74,9 @@
         <!-- build:js({.tmp,client}) app/app.js -->
         <script src="app/app.js"></script>
           <!-- injector:js -->
+          <script src="app/acgme/acgme.controller.js"></script>
+          <script src="app/acgme/acgme.js"></script>
+          <script src="app/acgme/factory.ACGMEGoals.js"></script>
           <script src="app/disease/disease.controller.js"></script>
           <script src="app/disease/disease.js"></script>
           <script src="app/disease/factory.diseaseGoals.js"></script>
