updated resident data files

--- a/client/app/rotation/rotation.html
+++ b/client/app/rotation/rotation.html
@@ -4,7 +4,7 @@
         <div class="toplink" id="badges" ng-click="badgesListShow()"><i class="fa fa-trophy"></i> Badges ({{minnies | number}} minnies)</div>
         <div class="toplink" id="diseaseview" ng-click="diseaseView()"><i class="fa fa-th"></i> Disease View</div>
         <div class="toplink" id="acgmeview" ng-click="ACGMEView()"><i class="fa fa-graduation-cap"></i> ACGME Goals</div>
-        <div class="toplink" id="feedback" ng-click="feedbackBoxShow = true"><i class="fa fa-comment-o"></i> Feedback Goals</div>
+        <div class="toplink" id="feedback" ng-click="feedbackBoxShow = true"><i class="fa fa-comment-o"></i> Feedback</div>
         <div id="user">
             Welcome, <span id="name">{{ data.name }}</span> | <span id="logout" ng-click="logout()">logout</span>
         </div>
