--- a/client/app/rotation/rotation.html
+++ b/client/app/rotation/rotation.html
@@ -19,6 +19,7 @@
             </slick>
         </div>
         <div id="rotation-goals" class="row">
+            <div class="section-label">Goals</div>
             <div class="rotation-nogoals-msg" ng-style="{'height': rotationGoalsDivHeight() + 'px', 'line-height': rotationGoalsDivHeight() + 'px'}" ng-if="isRotationWithoutGoals">No goals  available for this rotation.</div>
             <modality-goal modality="CT"></modality-goal>
             <modality-goal modality="XR"></modality-goal>
@@ -28,6 +29,7 @@
             <modality-goal modality="NM"></modality-goal>
         </div>
         <div id="rotation-summary" class="row">
+            <div class="section-label">All Studies</div>
             <modality-pie-chart id="rotation-summary-pie"></modality-pie-chart>
             <weekly-numbers-chart id="rotation-summary-numbers"></weekly-numbers-chart>
         </div>
@@ -41,12 +43,13 @@
                 <div class="examDesc">[ {{study.modality}} ] {{study.exam_name}}</div>
                 <div class="examTime">Transcribed Time: {{study.transcribed_time | date: 'short'}}</div>
                 <div class="diseaseLabels">Disease Labels: None</div>
+                <div class="hasEditsIndicator" ng-show="study.reportHasEdits"><i class="fa fa-pencil-square-o"></i> report contain edits</div>
                 <div class="showReportButton">
-                    <span ng-hide="showReportWithEditsBoolean[$index] || showReportBoolean[$index]" ng-click="showReportWithEditsBoolean[$index] = true">Show report with edits</span>
-                    <span ng-hide="showReportWithEditsBoolean[$index] || showReportBoolean[$index]" ng-click="showReportBoolean[$index] = true">Show finalized report</span>
-                    <span ng-show="showReportBoolean[$index] || showReportWithEditsBoolean[$index]" ng-click="showReportBoolean[$index] = false; showReportWithEditsBoolean[$index] = false;">Hide report</span></div>
-                <div class="studyReport animated fadeIn" ng-show="showReportWithEditsBoolean[$index]" ng-bind-html="preprocessReport(study.transcribed_report, study.report) | diff: study.report"></div>
-                <div class="studyReport animated fadeIn" ng-show="showReportBoolean[$index]" ng-bind-html="study.report"></div>
+                    <span class="button" ng-hide="!study.reportHasEdits || study.showReportWithEditsBoolean || study.showReportBoolean" ng-click="study.showReportWithEditsBoolean = true">Show report with edits</span>
+                    <span class="button" ng-hide="study.showReportWithEditsBoolean || study.showReportBoolean" ng-click="study.showReportBoolean = true">Show finalized report<span ng-hide="study.reportHasEdits"> (no edits)</span></span>
+                    <span class="button" ng-show="study.showReportBoolean || study.showReportWithEditsBoolean" ng-click="study.showReportBoolean = false; study.showReportWithEditsBoolean = false;">Hide report</span></div>
+                <div class="studyReport animated fadeIn" ng-show="study.showReportWithEditsBoolean" ng-bind-html="preprocessReport(study.transcribed_report, study.report) | diff: study.report"></div>
+                <div class="studyReport animated fadeIn" ng-show="study.showReportBoolean" ng-bind-html="study.report"></div>
             </div>
         </div>
     </div>
