--- a/client/index.html
+++ b/client/index.html
@@ -14,9 +14,9 @@
     <script src="//use.edgefonts.net/cutive;maven-pro;jura:n4,n6.js"></script>
     <!-- build:css(client) app/vendor.css -->
       <!-- bower:css -->
-      <link rel="stylesheet" href="bower_components/animate.css/animate.css" />
       <link rel="stylesheet" href="bower_components/slick-carousel/slick/slick.css" />
       <link rel="stylesheet" href="bower_components/ng-table/ng-table.css" />
+      <link rel="stylesheet" href="bower_components/animate-css/animate.css" />
       <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css({.tmp,client}) app/app.css -->
